[gd_scene load_steps=5 format=3 uid="uid://dswsqvvogw64k"]

[ext_resource type="Script" path="res://Scenes/menu/save_select.gd" id="1_02cnm"]
[ext_resource type="Texture2D" uid="uid://bnaaux7kwtar3" path="res://assets/menu/menu_bg.png" id="2_ayt03"]
[ext_resource type="Theme" uid="uid://cvhrwgxh48p4h" path="res://Scenes/level/custom_theme.tres" id="3_2tkx0"]
[ext_resource type="FontFile" uid="uid://ibdd8p7nexah" path="res://assets/fonts/Arkitech Bold.ttf" id="4_15qgx"]

[node name="SaveSelect" type="Node2D"]
script = ExtResource("1_02cnm")

[node name="MenuBg" type="Sprite2D" parent="."]
position = Vector2(640, 352)
texture = ExtResource("2_ayt03")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 704.0
theme = ExtResource("3_2tkx0")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.0
offset_right = 345.0
offset_bottom = 177.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_15qgx")
theme_override_font_sizes/font_size = 64
text = "SELECT SAVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FirstFileSelect" type="Button" parent="Control"]
layout_mode = 0
offset_left = 108.0
offset_top = 251.0
offset_right = 383.0
offset_bottom = 611.0
text = "first file"

[node name="FirstFileDelete" type="Button" parent="Control"]
layout_mode = 0
offset_left = 252.0
offset_top = 618.0
offset_right = 383.0
offset_bottom = 683.0
text = "Delete
file"

[node name="SecondFileSelect" type="Button" parent="Control"]
layout_mode = 0
offset_left = 503.0
offset_top = 251.0
offset_right = 778.0
offset_bottom = 611.0
text = "Second file"

[node name="SecondFileDelete" type="Button" parent="Control"]
layout_mode = 0
offset_left = 655.0
offset_top = 619.0
offset_right = 778.0
offset_bottom = 684.0
text = "Delete
file"

[node name="ThirdFileSelect" type="Button" parent="Control"]
layout_mode = 0
offset_left = 898.0
offset_top = 251.0
offset_right = 1173.0
offset_bottom = 611.0
text = "third file"

[node name="ThirdFileDelete" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1041.0
offset_top = 620.0
offset_right = 1173.0
offset_bottom = 688.0
text = "delete
file"

[node name="BackButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 33.0
offset_top = 27.0
offset_right = 210.0
offset_bottom = 120.0
text = "back"

[connection signal="pressed" from="Control/FirstFileSelect" to="." method="_on_first_file_select_pressed"]
[connection signal="pressed" from="Control/FirstFileDelete" to="." method="_on_first_file_pressed"]
[connection signal="pressed" from="Control/SecondFileSelect" to="." method="_on_second_file_select_pressed"]
[connection signal="pressed" from="Control/SecondFileDelete" to="." method="_on_second_file_pressed"]
[connection signal="pressed" from="Control/ThirdFileSelect" to="." method="_on_third_file_select_pressed"]
[connection signal="pressed" from="Control/ThirdFileDelete" to="." method="_on_third_file_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
